<resources>
    <string name="app_name">9am-5pm</string>
    <string name="title_clock">Check</string>
    <string name="title_history">History</string>
    <string name="title_me">Me</string>
    <string name="title_discover">Discover</string>
    <string name="late">You\'re late!</string>
    <string name="work_time_policy">Work-time policy</string>
    <string name="date_placeholder">----/--/--</string>
    <string name="time_placeholder">--:--</string>
    <string name="real_check_in">Real CheckIn Time</string>
    <string name="plan_checkout">Plan CheckOut Time</string>
    <string name="title">Title</string>
    <string name="policy_check_in">Check In</string>
    <string name="policy_check_out">Check Out</string>
    <string name="policy_latest_check_in">Latest Check In</string>
    <string name="hint_work_time_policy_set_name">modify the policy set name</string>
    <string name="text_workday">Workday</string>
    <string name="text_restday">Rest day</string>
    <string name="WEEK_SUNDAY">Sunday</string>
    <string name="WEEK_MONDAY">Monday</string>
    <string name="WEEK_TUESDAY">Tuesday</string>
    <string name="WEEK_WEDNESDAY">Wednesday</string>
    <string name="WEEK_THURSDAY">Thursday</string>
    <string name="WEEK_FRIDAY">Friday</string>
    <string name="WEEK_SATURDAY">Saturday</string>
    <string name="work_time_policy_title">Title</string>
    <string name="work_time_policy_check_in_label">Check-in time</string>
    <string name="work_time_policy_latest_check_in_label">Latest check-in time</string>
    <string name="work_time_policy_check_out_label">Check-out time</string>
    <string name="action_check_in">check in</string>
    <string name="action_check_out">check out</string>
    <string name="action_modify_time">modify time</string>
    <string name="check_io_issue">Check issue</string>
    <string name="early_leave">early leave</string>
    <string name="unavailable">N/A</string>
    <string name="normal">Normal</string>
    <string name="real_check_out">real check out time</string>
    <string name="checkout_time_up">checkout time up</string>
    <string name="work_time_policy_type">Type</string>
    <string name="modify_policy">Modify Policy</string>
    <string name="placeholder">---</string>
    <string name="action_add_policy_set">Add work-time policy set</string>
    <string name="action_add_policy">Add new work-time policy</string>
    <string name="no_title">No title</string>
    <string name="hint_policy_name">Input work-time policy name</string>
    <string name="hint_policy_short_name">Input short name</string>
    <string name="policy_name">policy name</string>
    <string name="policy_short_name">policy short name</string>
    <string name="policy_editor_title">Work-Time policy Editor</string>
    <string name="dummy_policy_name">dummy policy name</string>
    <string name="dummy_policy_short_name">dummy policy short name</string>
    <string name="export_records">Export records</string>
</resources>
