<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clock">

    <fragment
        android:id="@+id/navigation_clock"
        android:name="org.fw.attendance.ui.clock.ClockFragment"
        android:label="@string/title_clock"
        tools:layout="@layout/fragment_clock" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="org.fw.attendance.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="org.fw.attendance.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="org.fw.attendance.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>