<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WorkTimePolicySetEditor">

    <TextView
        android:id="@+id/tv_policy_set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/policy_short_name"
        app:layout_constraintBaseline_toBaselineOf="@id/et_policy_set_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_policy_set_name"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/hint_work_time_policy_set_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/rv_policy_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_policy_set_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_policy_set"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_policy_set_name">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_add_policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_add_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rv_policy_set"
        app:layout_constraintStart_toStartOf="@id/rv_policy_set"
        app:layout_constraintTop_toBottomOf="@id/rv_policy_set" />
</androidx.constraintlayout.widget.ConstraintLayout>