<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/line_and_outline_grey"
    android:orientation="vertical">

    <!-- date-->
    <TextView
        android:id="@+id/holder_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Title -->
    <TextView
        android:id="@+id/holder_tv_work_time_policy_set_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/work_time_policy_title"

        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/holder_tv_date"
        app:layout_constraintEnd_toStartOf="@id/holder_tv_work_time_policy_title"
         />

    <!-- Type value-->
    <TextView
        android:id="@+id/holder_tv_work_time_policy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_time_policy_type"

        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/holder_tv_work_time_policy_set_title"
        />

    <!-- check-in time value-->
    <TextView
        android:id="@+id/holder_tv_check_in_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/holder_tv_real_check_in_time"
        app:layout_constraintTop_toBottomOf="@id/holder_tv_work_time_policy_set_title" />

    <!-- real check-in time value-->
    <TextView
        android:id="@+id/holder_tv_real_check_in_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_placeholder"
        app:layout_constraintEnd_toStartOf="@id/holder_tv_check_in_issue"
        app:layout_constraintStart_toEndOf="@id/holder_tv_check_in_time"
        app:layout_constraintTop_toBottomOf="@+id/holder_tv_work_time_policy_set_title" />

    <!-- real check-in issue value-->
    <TextView
        android:id="@+id/holder_tv_check_in_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint=""
        android:text="@string/unavailable"
        app:layout_constraintEnd_toStartOf="@id/holder_tv_plan_check_out_time"
        app:layout_constraintStart_toEndOf="@id/holder_tv_real_check_in_time"
        app:layout_constraintTop_toBottomOf="@+id/holder_tv_work_time_policy_set_title" />

    <!-- check out value-->
    <TextView
        android:id="@+id/holder_tv_plan_check_out_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_placeholder"
        app:layout_constraintEnd_toStartOf="@id/holder_tv_real_check_out_time"
        app:layout_constraintStart_toEndOf="@id/holder_tv_check_in_issue"
        app:layout_constraintTop_toBottomOf="@+id/holder_tv_work_time_policy_set_title" />

    <!-- real check out value-->
    <TextView
        android:id="@+id/holder_tv_real_check_out_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_placeholder"
        app:layout_constraintEnd_toStartOf="@id/holder_tv_check_out_issue"
        app:layout_constraintStart_toEndOf="@id/holder_tv_plan_check_out_time"
        app:layout_constraintTop_toTopOf="@+id/holder_tv_plan_check_out_time" />

    <!-- check out issue value-->
    <TextView
        android:id="@+id/holder_tv_check_out_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint=""
        android:text="@string/unavailable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/holder_tv_real_check_out_time"
        app:layout_constraintTop_toTopOf="@+id/holder_tv_real_check_out_time" />

</androidx.constraintlayout.widget.ConstraintLayout>