<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <!-- Title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_policy_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/title" />
        <EditText
            android:id="@+id/ed_policy_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/hint_policy_title"
            android:text="---" />
    </LinearLayout>

    <!-- CheckIn -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_check_in_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="3"
            android:text="@string/policy_check_in" />

        <TextView
            android:id="@+id/tv_check_in_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="4"
            android:text="@string/time_placeholder" />

        <Button
            android:id="@+id/btn_modify_time_check_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/action_modify_time" />
    </LinearLayout>

    <!--  Latest CheckIn  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_latest_check_in_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="3"
            android:text="@string/policy_check_in" />

        <TextView
            android:id="@+id/tv_latest_check_in_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="4"
            android:text="@string/time_placeholder" />

        <Button
            android:id="@+id/btn_modify_time_latest_check_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/action_modify_time" />
    </LinearLayout>

    <!-- CheckOut -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_check_out_label"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/policy_check_in" />

        <TextView
            android:id="@+id/tv_check_out_value"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/time_placeholder" />

        <Button
            android:id="@+id/btn_modify_time_check_out"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_modify_time" />
    </LinearLayout>
</LinearLayout>